# Hanoi-Towers

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1
.github/workflows/: release.yml
packaging/: io.github.nanamitm.HanoiTowersSlideshow.desktop
src/: hanoimodel.cpp  hanoimodel.h  hanoisolver.cpp  hanoisolver.h  hanoiview.cpp  hanoiview.h  main.cpp  mainwindow.cpp  mainwindow.h
